@@ -1,3 +1,7 @@
+2007-06-15  Kai Habel <kai.habel@gmx.de>
+
+	* graphics.cc (Fget, Fset): Handle vectors of handles.
+
 2007-06-14  John W. Eaton  <jwe@octave.org>
 
 	* sysdep.cc (octave_popen, octave_pclose): New functions.
