@@ -1,3 +1,8 @@
+2007-06-15  John W. Eaton  <jwe@octave.org>
+
+	* run-octave.in: Use simple string concatenation instead of
+	sprintf in AWK program.
+
 2007-06-13  Michael Goffioul  <michael.goffioul@swing.be>
 
 	* configure.in: Set NO_OCT_FILE_STRIP=true for msdosmsvc.
